# swords

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/swords/: main.py
