[project]
name = "swords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "requests>=2.33.1",
    "selectolax>=0.4.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project.scripts]
swords = "swords.main:search"
